<resources>
    <string name="app_name">Data</string>
    <string name="nama">Nama</string>
    <string name="jumlahuang">Jumlah Uang</string>
    <string name="tanggal">Tanggal</string>
    <string name="tempattanggal">Tempat tanggal</string>
    <string name="status">Status</string>
    <string name="lunas">Lunas</string>
    <string name="tidaklunas">Tidak Lunas</string>
    <string name="simpanbtn">Simpan</string>
    <string name="tampil">Tampilkan Data</string>
    <string name="tnama">tempat nama</string>
    <string name="tempatuang">tuang</string>
    <string name="kembali">kembali</string>
    <string name="update">Update</string>
    <string name="tid">tempatid</string>
    <string name="id">id</string>
    <string name="totaldata">Total Uang  :</string>
    <string name="totaluangL">Uang Lunas  :</string>
    <string name="totaluangTL">Uang Tidak Lunas  :</string>
    <string name="totallunas">Data Lunas  :</string>
    <string name="totaltlunas">Data Tidak Lunas  :</string>
    <string name="tempatutlunas">tempatTL</string>
    <string name="tempatulunas">tempatL</string>
    <string name="totalUlunas">Uang Lunas  :</string>
    <string name="totalUTlunas">Uang Tidak Lunas  :</string>
    <string name="datakegiatan">Data Kegiatan</string>
    <string name="namakegiatan">Nama Kegiatan</string>


</resources>
