<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nama" />

        <EditText
            android:id="@+id/nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/jumlahuang" />

        <EditText
            android:id="@+id/uang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tanggal" />


        <TextView
            android:id="@+id/tanggal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tempattanggal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/status" />


        <RadioGroup
            android:id="@+id/rgrub"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/lunas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lunas"
                android:textSize="15sp" />

            <RadioButton
                android:id="@+id/tidaklunas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tidaklunas" />

        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/simpan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="actsimpan"
            android:text="@string/simpanbtn" />

        <TextView
            android:id="@+id/tidkeg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tid"
            android:visibility="gone" />

    </LinearLayout>


</LinearLayout>