<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txNama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/nama" />

    <TextView
        android:id="@+id/txJumlahUang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/jumlahuang" />

    <TextView
        android:id="@+id/txStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/status"
        android:textColor="@color/colorAccent" />

    <TextView
        android:id="@+id/txTanggal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/tanggal" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lines" />
</LinearLayout>